# DaqTools_Tutorial

./: .gitignore  CMakeLists.txt  Tutorial.sln
STEP10_DEVFUNC/: CMakeLists.txt  devfunc.vcxproj
STEP11_LOADPLD/: CMakeLists.txt  loadpld.vcxproj
STEP12_ADCREAD/: CMakeLists.txt  adcread.vcxproj
STEP1_GETINFO/: CMakeLists.txt  getinfo.vcxproj
STEP2_ADCSET/: CMakeLists.txt  adcset.vcxproj
STEP3_GETDATA/: CMakeLists.txt  getdata.vcxproj
STEP4_STREAM/: CMakeLists.txt  usestream.vcxproj
STEP5_MEMFIFO/: CMakeLists.txt  memfifo.vcxproj
STEP6_SDRAM/: CMakeLists.txt  usesdram.vcxproj
STEP7_SDRAMIRQ/: CMakeLists.txt  sdramirq.vcxproj
STEP8_CONT/: CMakeLists.txt  contdaq.vcxproj
STEP9_DAQFILE/: CMakeLists.txt  daqfile.vcxproj
